--- a/WebContent/UI/CSS/style.css
+++ b/WebContent/UI/CSS/style.css
@@ -59,7 +59,8 @@ body{height:auto}
 .button-div{margin-bottom:20px}
 /*面包屑*/
 .breadcrumb{background:#fff}
-/*分页*/
+/*教师*/
+.teacher-main{margin-left:3em;margin-top:1em}
 
 
 
